# modal-llama

./: .gitignore  README.md  pyproject.toml
src/modal_llama/: llama_cpp.py  llama_swap.py  models.py  nginx.py
src/modal_llama/baremetal/: build.py  deploy.py  serve.py
src/modal_llama/modal/: build.py  serve.py
src/modal_llama/runpod/: list_gpu_types.py
