[project]
name = "modal-llama"
version = "0.1.0"
description = "Wrapper to run your favorite LLM on Modal"
readme = "README.md"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" },
]
requires-python = ">=3.12, <=3.13"
dependencies = [
    "fabric>=3.2.2",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.4",
    "huggingface-hub>=0.33.0",
    "modal>=1.0.4",
    "more-itertools>=10.7.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "typer>=0.16.0",
]

[project.scripts]
deploy = "modal_llama.modal.serve:deploy"
deploy-ssh = "modal_llama.baremetal.deploy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
